--- a/index.html
+++ b/index.html
@@ -16,31 +16,27 @@
     <div class="container-scroller">
 
         <!-- Navbar start -->
-        <div class="container-fluid">
+        <nav id="main-nav" class="navbar col-lg-12 col-md-12 col-sm-12 p-lg-0 fixed-top d-flex">
+            <div class="navbar-menu-wrapper d-flex align-items-center justify-content-between gap-4 mx-4 my-3">
+                <a href="#">
+                    <i id="menu-toggle" class="fa-solid fa-bars"></i>
+                </a>
+                <a href="#">
+                    <img height="38px" src="./images/navbar/nizcare-logo.png" alt="logo" />
+                </a>
+            </div>
 
-            <nav id="main-nav" class="navbar col-lg-12 col-md-12 col-sm-12 p-lg-0 fixed-top d-flex">
-                <div class="navbar-menu-wrapper d-flex align-items-center justify-content-between gap-4 mx-4 my-3">
-                    <a href="#">
-                        <i id="menu-toggle" class="fa-solid fa-bars"></i>
-                    </a>
-                    <a href="#">
-                        <img height="38px" src="./images/navbar/nizcare-logo.png" alt="logo" />
-                    </a>
-                </div>
-
-                <div class="navbar-menu-wrapper d-flex align-items-center justify-content-between gap-4 mx-4 my-3">
-                    <a href="#">
-                        <span>CHARANJITHA SINGH</span>
-                    </a>
-                    <a href="#">
-                        <div>H</div>
-                    </a>
-                </div>
-            </nav>
-
-        </div>
+            <div class="navbar-menu-wrapper d-flex align-items-center justify-content-between gap-2 mx-4 my-3">
+                <a href="#">
+                    <span>CHARANJITHA SINGH</span>
+                </a>
+                <a href="#">
+                    <div>H</div>
+                </a>
+            </div>
+        </nav>
         <!-- Navbar end -->
-
+        <!-- Sidebar start -->
         <nav class="sidebar sidebar-offcanvas" id="sidebar">
 
             <ul class="nav row">
@@ -68,7 +64,8 @@
 
             </ul>
         </nav>
-
+        <!-- Sidebar end -->
+        <!-- Maincontent start -->
         <div class="main-content" id="main-content">
             <div class="row">
                 <div class="col-lg-12 col-md-12 col-sm-12 my-3">
@@ -78,15 +75,15 @@
                         </div>
                         <div>
                             <form>
-                                <button style="background-color: #229ea6; color: #fff;" type="submit">NEW BOOKING</button>
+                                <button style="background-color: #229ea6; color: #fff;" type="submit">NEW
+                                    BOOKING</button>
                             </form>
                         </div>
                     </div>
                 </div>
 
-
-                <div>
-                    <div id="full-form">
+                <div id="full-form">
+                    <div>
                         <form>
                             <div class="niz-input d-flex gap-4 align-items-center flex-wrap">
                                 <input class="col-lg-2 col-md-12 col-sm-12" type="date">
@@ -105,19 +102,269 @@
                             </div>
 
                             <div class="care-input d-flex gap-4 align-items-center flex-wrap mt-4">
-                                <input type="radio">
-                                <label>By Booking Date</label>
-                                <input type="radio">
-                                <label>By Appointment Date</label>
+                                <div class="d-flex gap-2">
+                                    <input type="radio" name="date">
+                                    <label>By Booking Date</label>
+                                </div>
+                                <div class="d-flex gap-2">
+                                    <input type="radio" name="date">
+                                    <label>By Appointment Date</label>
+                                </div>
                                 <button style="background-color: lightgray;">CLEAR</button>
                                 <button style="background-color: #229ea6; color: #fff;" type="submit">SUBMIT</button>
-                                <button style="background-color: #229ea6; color: #fff;" type="submit">DOWNLOAD AS EXCEL</button>
+                                <button style="background-color: #229ea6; color: #fff;" type="submit">DOWNLOAD AS
+                                    EXCEL</button>
                             </div>
                         </form>
                     </div>
+
+                    <div class="d-flex justify-content-end align-items-center flex-wrap search-in mt-4">
+                        <div class="d-flex align-items-center gap-2">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <input type="search" placeholder="Search">
+                        </div>
+                    </div>
+
+                    <div class="board mt-4">
+                        <table width="100%">
+
+                            <thead>
+                                <tr>
+                                    <td>Appointment Id</td>
+                                    <td>Corporate Name</td>
+                                    <td>Name</td>
+                                    <td>Email id</td>
+                                    <td>Mobile</td>
+                                    <td>Action</td>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td class="people">
+                                        <h5>252082</h5>
+                                    </td>
+
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+
+                                    <td class="active">
+                                        <p>Donepati Ajith</p>
+                                    </td>
+
+                                    <td class="role">
+                                        <p>charanjithasingh@nizcare.com</p>
+                                    </td>
+
+                                    <td class="edit">
+                                        <p>8919095553</p>
+                                    </td>
+
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#">
+                                                <i class="fa-solid fa-eye"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-circle-xmark"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251955</h5>
+                                    </td>
+
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+
+                                    <td class="active">
+                                        <p>Savita</p>
+                                    </td>
+
+                                    <td class="role">
+                                        <p>charanjithasingh@nizcare.com</p>
+                                    </td>
+
+                                    <td class="edit">
+                                        <p>9353150621</p>
+                                    </td>
+
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#">
+                                                <i class="fa-solid fa-eye"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-circle-xmark"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251950</h5>
+                                    </td>
+
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+
+                                    <td class="active">
+                                        <p>Mohammad Noorjahan</p>
+                                    </td>
+
+                                    <td class="role">
+                                        <p>network@nizcare.com</p>
+                                    </td>
+
+                                    <td class="edit">
+                                        <p>7095437657</p>
+                                    </td>
+
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#">
+                                                <i class="fa-solid fa-eye"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-circle-xmark"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251855</h5>
+                                    </td>
+
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+
+                                    <td class="active">
+                                        <p>Tharun M</p>
+                                    </td>
+
+                                    <td class="role">
+                                        <p>network@nizcare.com</p>
+                                    </td>
+
+                                    <td class="edit">
+                                        <p>6366313835</p>
+                                    </td>
+
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#">
+                                                <i class="fa-solid fa-eye"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-circle-xmark"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251486</h5>
+                                    </td>
+
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+
+                                    <td class="active">
+                                        <p>Kumkum Kumari</p>
+                                    </td>
+
+                                    <td class="role">
+                                        <p>charanjithasingh@nizcare.com</p>
+                                    </td>
+
+                                    <td class="edit">
+                                        <p>8287371389</p>
+                                    </td>
+
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#">
+                                                <i class="fa-solid fa-eye"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-circle-xmark"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251480</h5>
+                                    </td>
+
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+
+                                    <td class="active">
+                                        <p>Kavita Rajkumar Benda</p>
+                                    </td>
+
+                                    <td class="role">
+                                        <p>network@nizcare.com</p>
+                                    </td>
+
+                                    <td class="edit">
+                                        <p>8919095553</p>
+                                    </td>
+
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#">
+                                                <i class="fa-solid fa-eye"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-circle-xmark"></i>
+                                            </a>
+                                            <a href="#">
+                                                <i class="fa-solid fa-clock-rotate-left"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                            </tbody>
+
+                        </table>
+                    </div>
+
                 </div>
             </div>
         </div>
+        <!-- Maincontent end -->
     </div>
 
 
