--- a/index.html
+++ b/index.html
@@ -71,13 +71,10 @@
                 <div class="col-lg-12 col-md-12 col-sm-12 my-3">
                     <div class="d-flex justify-content-between">
                         <div>
-                            <h2>Health Checks</h2>
+                            <h3>Health Checks</h3>
                         </div>
                         <div>
-                            <form>
-                                <button style="background-color: #229ea6; color: #fff;" type="submit">NEW
-                                    BOOKING</button>
-                            </form>
+                            <a href="./newbooking.html" style="background-color: #229ea6; color: #fff;">NEW BOOKING</a>
                         </div>
                     </div>
                 </div>
@@ -86,23 +83,35 @@
                     <div>
                         <form>
                             <div class="niz-input d-flex gap-4 align-items-center flex-wrap">
-                                <input class="col-lg-2 col-md-12 col-sm-12" type="date">
-                                <input class="col-lg-2 col-md-12 col-sm-12" type="date">
-                                <select class="col-lg-4 col-md-12 col-sm-12">
-                                    <option>Select Corporate Name</option>
-                                    <option>NIZCARE PRIVATE LIMITED</option>
-                                </select>
-                                <select class="col-lg-3 col-md-12 col-sm-12">
-                                    <option>Select Status</option>
-                                    <option>Orders Confirmed</option>
-                                    <option>Bill Generated</option>
-                                    <option>Orders Completed</option>
-                                    <option>Orders Cancelled</option>
-                                </select>
+                                <div>
+                                    <label for="dob" class="dob-label">From Date</label>
+                                    <input type="date" id="dob" name="dob" value="2009-08-06" class="dob-input">
+                                </div>
+                                <div>
+                                    <label for="dob" class="dob-label">To Date</label>
+                                    <input type="date" id="dob" name="dob" value="2009-08-06" class="dob-input">
+                                </div>
+                                <div>
+                                    <label class="dropdown-label">Corporate Name</label>
+                                    <select id="corporate-name" name="corporate-name" class="dropdown-input">
+                                        <option>Select Corporate Name</option>
+                                        <option>NIZCARE PRIVATE LIMITED</option>
+                                    </select>
+                                </div>
+                                <div>
+                                    <label class="dropdown-label">Select Status</label>
+                                    <select id="corporate-name" name="corporate-name" class="dropdown-input">
+                                        <option>Select Status</option>
+                                        <option>Orders Confirmed</option>
+                                        <option>Bill Generated</option>
+                                        <option>Orders Completed</option>
+                                        <option>Orders Cancelled</option>
+                                    </select>
+                                </div>
                             </div>
 
                             <div class="care-input d-flex gap-4 align-items-center flex-wrap mt-4">
-                                <div class="d-flex gap-2">
+                                <div class="d-flex align-items-center gap-2">
                                     <input type="radio" name="date">
                                     <label>By Booking Date</label>
                                 </div>
@@ -118,10 +127,12 @@
                         </form>
                     </div>
 
-                    <div class="d-flex justify-content-end align-items-center flex-wrap search-in mt-4">
-                        <div class="d-flex align-items-center gap-2">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                            <input type="search" placeholder="Search">
+                    <div class="d-flex justify-content align-items-center flex-wrap mt-4">
+                        <div>
+                            <!-- <label for="search" class="search-label">Search</label> -->
+                            <div class="search-container">
+                                <input type="text" id="search" name="search" class="search-input" placeholder="Search">
+                            </div>
                         </div>
                     </div>
 
