--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NIZCARE BOOKING</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <link rel="icon" href="./images/wepage-log.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -74,7 +75,7 @@
                             <h3>Health Checks</h3>
                         </div>
                         <div>
-                            <a href="./newbooking.html" style="background-color: #229ea6; color: #fff;">NEW BOOKING</a>
+                            <a href="./newbooking.html">NEW BOOKING</a>
                         </div>
                     </div>
                 </div>
@@ -129,10 +130,8 @@
                                     <span id="ind-date-option"></span>
                                 </div>
                                 <button type="button" onclick="clearForm()"
-                                    style="background-color: lightgray;">CLEAR</button>
-                                <button type="submit" style="background-color: #229ea6; color: #fff;">SUBMIT</button>
-                                <button type="submit" style="background-color: #229ea6; color: #fff;">DOWNLOAD AS
-                                    EXCEL</button>
+                                    style="background-color: lightgray; color: #000;">CLEAR</button>
+                                <button type="submit">SUBMIT</button>
                             </div>
                         </form>
                     </div>
@@ -141,9 +140,13 @@
                         <div class="search-container">
                             <input type="text" id="search" name="search" class="search-input" placeholder="Search">
                         </div>
-                        <div>
-                            <a href="#" id="search-btn">Click For Search</a>
+                        <div id="search">
+                            <a href="#" id="search-btn">CLICK FOR SEARCH</a>
                         </div>
+                    </div>
+
+                    <div class="downloadExcel mt-4">
+                        <button id="downloadExcel" onclick="downloadExcel()" type="submit">DOWNLOAD AS EXCEL</button>
                     </div>
 
                     <div class="board mt-4">
@@ -183,22 +186,122 @@
                                         </div>
                                     </td>
                                 </tr>
-                                <!-- Add more rows as necessary -->
+
                                 <tr>
                                     <td class="people">
-                                        <h5>251955</h5>
+                                        <h5>252062</h5>
                                     </td>
                                     <td class="people-des">
                                         <h5>NIZCARE PRIVATE LIMITED...</h5>
                                     </td>
                                     <td class="active">
-                                        <p>Savita</p>
+                                        <p>Donepati</p>
                                     </td>
                                     <td class="role">
-                                        <p>charanjithasingh@nizcare.com</p>
+                                        <p>donepati@nizcare.com</p>
+                                    </td>
+                                    <td class="edit">
+                                        <p>8919095553</p>
+                                    </td>
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>252072</h5>
+                                    </td>
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+                                    <td class="active">
+                                        <p>Ajith</p>
+                                    </td>
+                                    <td class="role">
+                                        <p>ajith@nizcare.com</p>
+                                    </td>
+                                    <td class="edit">
+                                        <p>8919095553</p>
+                                    </td>
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <!-- Add more rows as necessary -->
+                                <tr>
+                                    <td class="people">
+                                        <h5>251976</h5>
+                                    </td>
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+                                    <td class="active">
+                                        <p>Ranjith</p>
+                                    </td>
+                                    <td class="role">
+                                        <p>ranjith@nizcare.com</p>
                                     </td>
                                     <td class="edit">
                                         <p>9353150621</p>
+                                    </td>
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251976</h5>
+                                    </td>
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+                                    <td class="active">
+                                        <p>Muthu</p>
+                                    </td>
+                                    <td class="role">
+                                        <p>muthu@nizcare.com</p>
+                                    </td>
+                                    <td class="edit">
+                                        <p>9313127682</p>
+                                    </td>
+                                    <td>
+                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
+                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
+                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
+                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
+                                        </div>
+                                    </td>
+                                </tr>
+
+                                <tr>
+                                    <td class="people">
+                                        <h5>251236</h5>
+                                    </td>
+                                    <td class="people-des">
+                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
+                                    </td>
+                                    <td class="active">
+                                        <p>Hariram</p>
+                                    </td>
+                                    <td class="role">
+                                        <p>hari@nizcare.com</p>
+                                    </td>
+                                    <td class="edit">
+                                        <p>9353896321</p>
                                     </td>
                                     <td>
                                         <div id="icons-style" class="d-flex gap-3 align-items-center">
@@ -220,6 +323,9 @@
         <!-- Maincontent end -->
     </div>
 
+    <script>
+
+    </script>
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
