--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="report.html">
                         <i class="fa-solid fa-file-invoice"></i>
                         <span class="menu-title">Reports</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">
-                        <i class="fa-solid fa-file-invoice"></i>
+                    <a class="nav-link" href="./escalation.html">
+                        <i class="fa-brands fa-mendeley"></i>
                         <span class="menu-title">Escalation Matrix</span>
                     </a>
                 </li>
@@ -69,10 +69,10 @@
         <!-- Maincontent start -->
         <div class="main-content" id="main-content">
             <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12 my-3">
+                <div class="my-3">
                     <div class="d-flex justify-content-between">
                         <div>
-                            <h3>Health Checks</h3>
+                            <h3 style="color: #fff; font-weight: 700;">Health Checks</h3>
                         </div>
                         <div>
                             <a href="./newbooking.html">NEW BOOKING</a>
@@ -138,7 +138,7 @@
 
                     <div class="d-flex gap-4 align-items-center mt-4">
                         <div class="search-container">
-                            <input type="text" id="search" name="search" class="search-input" placeholder="Search">
+                            <input type="text" id="search" name="search" class="search-input" placeholder="Search by Appointment-Id or Name ">
                         </div>
                         <div id="search">
                             <a href="#" id="search-btn">CLICK FOR SEARCH</a>
@@ -316,16 +316,19 @@
                         </table>
                         <!-- <span class="mt-3" id="no-data">No Data Found</span> -->
                     </div>
-
                 </div>
+                <footer>
+                    <div class="my-4 mx-3">
+                        <span style="color: #fff;"><span>Copyright Nizcare</span> © 2024</span>
+                    </div>
+                </footer>
             </div>
         </div>
         <!-- Maincontent end -->
+
     </div>
 
-    <script>
 
-    </script>
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
