--- a/newbooking.html
+++ b/newbooking.html
@@ -48,14 +48,14 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="report.html">
                         <i class="fa-solid fa-file-invoice"></i>
                         <span class="menu-title">Reports</span>
                     </a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">
+                    <a class="nav-link" href="./escalation.html">
                         <i class="fa-solid fa-file-invoice"></i>
                         <span class="menu-title">Escalation Matrix</span>
                     </a>
@@ -69,7 +69,7 @@
             <div class="row">
                 <div class="my-3">
                     <div>
-                        <h3>Booking Form</h3>
+                        <h3 style="color: #fff;">Booking Form</h3>
                     </div>
                 </div>
 
@@ -397,10 +397,14 @@
                             </form>
                         </div>
                         <!-- For Dependent end -->
-                    </div>
+                    </div>    
                 </div>
+                <footer>
+                    <div class="my-4 mx-3">
+                        <span style="color: #fff;"><span>Copyright Nizcare</span> © 2024</span>
+                    </div>
+                </footer>
             </div>
-
         </div>
         <!-- Maincontent end -->
     </div>
