--- a/newbooking.html
+++ b/newbooking.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NEW BOOKING</title>
+    <title>New Booking</title>
     <link rel="icon" href="./images/wepage-log.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -397,7 +397,7 @@
                             </form>
                         </div>
                         <!-- For Dependent end -->
-                    </div>    
+                    </div>
                 </div>
                 <footer>
                     <div class="my-4 mx-3">
