--- a/report.html
+++ b/report.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>REPORTS</title>
+    <title>Reports</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.17.0/xlsx.full.min.js"></script>
     <link rel="icon" href="./images/wepage-log.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -138,7 +138,7 @@
                             <tbody id="patient-table-body">
                                 <tr>
                                     <td class="patient-name">
-                                        <p>Mr. Ranjith</p>
+                                        <p>Ranjith</p>
                                     </td>
                                     <td class="patient-uhid">
                                         <p>CMAR.0000359658</p>
@@ -167,10 +167,43 @@
                                         </div>
                                     </td>
                                 </tr>
+
+                                <tr>
+                                    <td class="patient-name">
+                                        <p>Surya</p>
+                                    </td>
+                                    <td class="patient-uhid">
+                                        <p>CMAR.0000359659</p>
+                                    </td>
+                                    <td>
+                                        <p>CMAROPV846477</p>
+                                    </td>
+                                    <td>
+                                        <p>Marathahalli...</p>
+                                    </td>
+                                    <td>
+                                        <p>91+8951142398</p>
+                                    </td>
+                                    <td>
+                                        <p>NIZCARE ELIOR INDIA - HEALTH C...</p>
+                                    </td>
+                                    <td>
+                                        <p>700.0</p>
+                                    </td>
+                                    <td>
+                                        <p>2024-08-07 17:00</p>
+                                    </td>
+                                    <td>
+                                        <div class="action-links d-flex gap-3 align-items-center mb-3 mx-2">
+                                            <a href="#" style="color: #229ea6; font-weight: 600;">VIEW</a>
+                                        </div>
+                                    </td>
+                                </tr>
                             </tbody>
 
                         </table>
-                        <span class="mt-3" id="no-results-message" style="display: none;">No Data Found</span>
+                        <span class="mt-3 mx-3" id="no-results-message"
+                            style="display: none; color: red; font-weight: 600;">No Data Found</span>
                     </div>
                 </div>
             </div>
