--- a/newbooking.html
+++ b/newbooking.html
@@ -423,6 +423,24 @@
             document.getElementById('dependent-form-container').style.display = 'block';
         })
         //   Toggle for Self and Dependent end
+        //   Fetching data from json file start
+        document.addEventListener('DOMContentLoaded', function () {
+            const selectElement = document.getElementById('center-city-name');
+
+            fetch('cities.json')
+                .then(response => response.json())
+                .then(data => {
+                    const city = data.city;
+                    city.forEach(corp => {
+                        const option = document.createElement('option');
+                        option.value = corp;
+                        option.textContent = corp;
+                        selectElement.appendChild(option);
+                    });
+                })
+                .catch(error => console.error('Error fetching JSON:', error));
+        });
+        //   Fetching data from json file end
     </script>
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
