--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <div class="d-flex gap-4 align-items-center mt-4">
                         <div class="search-container">
                             <input type="text" id="search" name="search" class="search-input"
-                                placeholder="Search by Appointment-Id or Name ">
+                                placeholder="Search by Mobile No or Name ">
                         </div>
                         <div>
                             <a href="#" id="search-btn">CLICK FOR SEARCH</a>
@@ -202,7 +202,7 @@
                                         <p>donepati@nizcare.com</p>
                                     </td>
                                     <td>
-                                        <p>8919095553</p>
+                                        <p>8919095253</p>
                                     </td>
                                     <td>
                                         <div id="icons-style" class="d-flex gap-3 align-items-center">
@@ -212,107 +212,6 @@
                                         </div>
                                     </td>
                                 </tr>
-
-                                <tr>
-                                    <td class="people">
-                                        <h5>252072</h5>
-                                    </td>
-                                    <td class="people-des">
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-                                    <td class="active">
-                                        <p>Ajith</p>
-                                    </td>
-                                    <td class="role">
-                                        <p>ajith@nizcare.com</p>
-                                    </td>
-                                    <td class="edit">
-                                        <p>8919095553</p>
-                                    </td>
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
-                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <h5>251976</h5>
-                                    </td>
-                                    <td>
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-                                    <td>
-                                        <p>Ranjith</p>
-                                    </td>
-                                    <td>
-                                        <p>ranjith@nizcare.com</p>
-                                    </td>
-                                    <td>
-                                        <p>9353150621</p>
-                                    </td>
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
-                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <h5>251976</h5>
-                                    </td>
-                                    <td>
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-                                    <td>
-                                        <p>Muthu</p>
-                                    </td>
-                                    <td>
-                                        <p>muthu@nizcare.com</p>
-                                    </td>
-                                    <td>
-                                        <p>9313127682</p>
-                                    </td>
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
-                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-
-                                <tr>
-                                    <td>
-                                        <h5>251236</h5>
-                                    </td>
-                                    <td>
-                                        <h5>NIZCARE PRIVATE LIMITED...</h5>
-                                    </td>
-                                    <td>
-                                        <p>Hariram</p>
-                                    </td>
-                                    <td>
-                                        <p>hari@nizcare.com</p>
-                                    </td>
-                                    <td>
-                                        <p>9353896321</p>
-                                    </td>
-                                    <td>
-                                        <div id="icons-style" class="d-flex gap-3 align-items-center">
-                                            <a href="#"><i class="fa-solid fa-eye"></i></a>
-                                            <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-                                            <a href="#"><i class="fa-solid fa-clock-rotate-left"></i></a>
-                                        </div>
-                                    </td>
-                                </tr>
-
                             </tbody>
                         </table>
                         <span class="mt-3 mx-3" id="no-data" style="display: none; color: red; font-weight: 600;">No
